update desktop view

--- a/src/common/menus/Items/HowToPlay/styles.module.scss
+++ b/src/common/menus/Items/HowToPlay/styles.module.scss
@@ -1,3 +1,6 @@
-.menu-how-to-play {
-    min-height: 90%;
+:global(.mobile-portrait),
+:global(.mobile-landscape) {
+    .menu-how-to-play {
+        min-height: 90%;
+    }
 }
