--- a/src/common/menus/Items/Transactions/styles.module.scss
+++ b/src/common/menus/Items/Transactions/styles.module.scss
@@ -1,3 +1,6 @@
-.menu-history {
-    min-height: 90%;
+:global(.mobile-portrait),
+:global(.mobile-landscape) {
+    .menu-history {
+        min-height: 90%;
+    }
 }
