--- a/src/common/components/Streaming/styles.module.scss
+++ b/src/common/components/Streaming/styles.module.scss
@@ -164,24 +164,31 @@
     }
 
     .video-background {
+        --color: 0, 0, 0;
+
         position: absolute;
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 20rem;
+        height: 30rem;
 
-        &::before {
-            content: '';
-            position: absolute;
-            inset: 0;
-        }
+        background: linear-gradient(180deg, transparent 0%, rgba(var(--color), 0.7) 100%);
+
+        // &::before {
+        //     content: '';
+        //     position: absolute;
+        //     inset: 0;
+        // }
     }
 
-    .video-background,
-    .video-background::before {
-        background: var(--streaming-background); // var(--streaming-color-6);
-        mask-image: linear-gradient(transparent, #000);
-    }
+    // .video-background,
+    // .video-background::before {
+    //     background: rgba(
+    //         var(--color),
+    //         0.5
+    //     ); // var(--streaming-background); // var(--streaming-color-6);
+    //     mask-image: linear-gradient(transparent, #000);
+    // }
 
     .top-gradient {
         --color: 0, 0, 0;
