--- a/src/common/desktop/TopLeft/styles.module.scss
+++ b/src/common/desktop/TopLeft/styles.module.scss
@@ -6,5 +6,24 @@
     z-index: var(--layer-game);
 
     display: flex;
-    gap: 1.2rem;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    // align-items: flex-end;
+    gap: 0.8rem;
+}
+
+.game {
+    display: flex;
+    gap: 0.6rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.period {
+    color: #ccc;
 }
