--- a/src/common/menus/Panel/styles.module.scss
+++ b/src/common/menus/Panel/styles.module.scss
@@ -1,6 +1,5 @@
 .menu-content {
     position: absolute;
-    bottom: 0;
 
     display: flex;
     flex-direction: column;
@@ -27,6 +26,7 @@
         width: 100%;
         max-height: 90%;
         left: 0;
+        bottom: 0;
 
         box-shadow: 0 -0.4rem 1.2rem rgba(0, 0, 0, 0.3);
 
@@ -42,12 +42,12 @@
     }
 }
 
-:global(.desktop),
 :global(.mobile-landscape) {
     .menu-content {
         height: 100%;
         width: 36rem;
         top: 0;
+        bottom: 0;
 
         &.layout-1 {
             left: 0;
@@ -86,6 +86,10 @@
 
 :global(.desktop) {
     .menu-content {
-        width: 50rem;
+        width: 38rem;
+        height: 58.8rem;
+        top: 8rem;
+        right: 2rem;
+        border-radius: 1rem;
     }
 }
