--- a/src/common/desktop/TopLeft/LimitBet/styles.module.scss
+++ b/src/common/desktop/TopLeft/LimitBet/styles.module.scss
@@ -14,4 +14,27 @@
 
 .icon {
     width: 2.2rem;
+    height: 2.2rem;
+
+    transform: rotateZ(0deg);
+    // color: white;
+
+    & > svg {
+        width: 100%;
+        height: 100%;
+    }
+
+    transition:
+        transform 0.4s,
+        color 0.4s;
+
+    &.close {
+        transform: rotateZ(0deg);
+        // color: #6b6c80;
+    }
+
+    &.open {
+        transform: rotateZ(180deg);
+        // color: white;
+    }
 }
