--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -102,6 +102,10 @@
         width: calc(100% + 1.6rem);
     }
 
+    .icon {
+        border-width: 0.15rem;
+    }
+
     .icon:hover {
         background-color: rgba(94, 94, 94, 0.3);
     }
