adjust font size in

--- a/src/common/components/Alerts/MessageYouWin/styles.module.scss
+++ b/src/common/components/Alerts/MessageYouWin/styles.module.scss
@@ -7,8 +7,10 @@
 
     transform: translateX(var(--translate-x));
 
-    width: 20rem;
     height: 4.7rem;
+    width: max-content;
+    min-width: 20rem;
+    max-width: 32rem;
 }
 
 :global :local(.you-win) {
@@ -28,13 +30,14 @@
 }
 
 .background {
-    height: 100%;
-}
-
-.content {
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.content {
     width: 100%;
     height: 100%;
 
@@ -63,6 +66,24 @@
 
 :global(.desktop) {
     .you-win {
-        top: 48rem;
+        top: 46rem;
+
+        height: 5.9361rem; /* 4.7rem * 1.263 */
+        min-width: 40rem;
+        max-width: 100rem;
+    }
+
+    .content {
+        padding: 1.01rem 1.263rem; /* 0.8rem and 1rem * 1.263 */
+        gap: 0.758rem; /* 0.6rem * 1.263 */
+    }
+
+    .label {
+        font-size: 1.2rem;
+    }
+
+    .value {
+        font-size: 2.4rem;
+        letter-spacing: -0.048rem;
     }
 }
