--- a/src/common/components/Alerts/NewSet/Message/styles.module.scss
+++ b/src/common/components/Alerts/NewSet/Message/styles.module.scss
@@ -7,9 +7,10 @@
 
     transform: translateX(var(--translate-x)) translateY(var(--translate-y));
 
-    // width: 22rem;
-    width: 27.8rem;
     height: 2rem;
+    width: max-content;
+    min-width: 28rem;
+    max-width: 34rem;
 }
 
 :global :local(.message) {
@@ -20,29 +21,15 @@
     animation: fadeOut 0.3s linear forwards;
 }
 
-:global(.mobile-portrait) {
-    .message {
-        --translate-y: -2rem;
-
-        top: calc(var(--height-streaming) * 1px);
-    }
-}
-
-:global(.desktop),
-:global(.mobile-landscape) {
-    .message {
-        top: 0.4rem;
-    }
-}
-
 .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
 }
 
 .content {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
 
@@ -58,4 +45,33 @@
     letter-spacing: 0.01rem;
     text-transform: uppercase;
     text-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.3);
+}
+
+:global(.mobile-portrait) {
+    .message {
+        --translate-y: -2rem;
+
+        top: calc(var(--height-streaming) * 1px);
+    }
+}
+
+:global(.mobile-landscape) {
+    .message {
+        top: 0.4rem;
+    }
+}
+
+:global(.desktop) {
+    .message {
+        top: 46rem;
+        height: 4rem;
+        min-width: 56rem;
+        max-width: 68rem;
+    }
+
+    .text {
+        font-size: 1.8rem;
+        letter-spacing: 0.02rem;
+        text-shadow: 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.3);
+    }
 }
