new landscape view

--- a/src/game/components/TableBetV2/index.module.scss
+++ b/src/game/components/TableBetV2/index.module.scss
@@ -51,7 +51,7 @@
 
     .closed {
         --translate-x: 0;
-        --translate-y: 0;
+        --translate-y: 0.4rem;
         --scale: 0.75;
         --opacity: 0.6;
         --rotate-x: 46deg;
