adjust dragon tiger

--- a/src/game/components/MainAreaDesktop/styles.module.scss
+++ b/src/game/components/MainAreaDesktop/styles.module.scss
@@ -17,4 +17,8 @@
     flex-shrink: 0;
     flex-grow: 0;
     overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
