--- a/src/game/components/Card/RenderCard/styles.module.scss
+++ b/src/game/components/Card/RenderCard/styles.module.scss
@@ -1,3 +1,20 @@
+:global(.mobile-portrait),
+:global(.mobile-landscape) {
+    .container {
+        width: 2.4rem;
+        height: 3.1rem;
+        font-size: 2.4rem;
+    }
+}
+
+:global(.desktop) {
+    .container {
+        width: 4.8rem;
+        height: 6.2rem;
+        font-size: 4.8rem;
+    }
+}
+
 .card-core,
 .card-core-detail {
     transform-style: preserve-3d;
