--- a/src/game/components/TableBetV2/index.module.scss
+++ b/src/game/components/TableBetV2/index.module.scss
@@ -11,13 +11,30 @@
     gap: 0.2rem;
 }
 
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+
+    height: 13.4rem;
+    width: 13.4rem;
+    border-radius: 50%;
+    background-color: #8f4100;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.2rem 0;
+}
+
 :global(.mobile-portrait) {
     .table-bet {
         height: calc(100% - 1.8rem);
     }
 }
 
-:global(.desktop),
 :global(.mobile-landscape) {
     .table-bet {
         --perspective: 100rem;
@@ -58,22 +75,51 @@
     }
 }
 
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
+:global(.desktop) {
+    .table-bet {
+        // --center-half: 13rem;
+        --center-half: 9rem;
 
-    height: 13.4rem;
-    width: 13.4rem;
-    border-radius: 50%;
-    background-color: #8f4100;
+        --perspective: 100rem;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.2rem 0;
+        --translate-y: 0;
+        --scale: 1;
+        --opacity: 1;
+        --rotate-x: 0;
+
+        height: calc(100% - 0.8rem);
+        width: 100%;
+
+        grid-template-rows: 1fr 17rem 1fr;
+
+        transform: translateY(var(--translate-y)) scale(var(--scale))
+            perspective(var(--perspective)) rotateX(var(--rotate-x));
+        opacity: var(--opacity);
+
+        transform-origin: bottom;
+        transition-duration: 0.75s;
+        transition-property: transform, opacity;
+    }
+
+    .opened {
+        --translate-y: 0;
+        --scale: 1;
+        --opacity: 1;
+        --rotate-x: 0;
+    }
+
+    .closed {
+        --translate-y: 0.4rem;
+        --scale: 0.96;
+        --opacity: 0.75;
+        --rotate-x: 30deg;
+    }
+
+    .center {
+        height: 26rem;
+        width: 26rem;
+        padding: 0.4rem 0;
+    }
 }
 
 .stick {
