--- a/src/common/menus/Menu/styles.module.scss
+++ b/src/common/menus/Menu/styles.module.scss
@@ -21,6 +21,7 @@
     .menu {
         background-color: rgba(2, 16, 33, 0.2);
         animation-duration: 0.2s;
+        pointer-events: none;
     }
 }
 
