--- a/src/common/menus/Panel/styles.module.scss
+++ b/src/common/menus/Panel/styles.module.scss
@@ -7,10 +7,6 @@
     background-color: #222334;
 
     transition: height 1s linear;
-
-    &:first-child {
-        opacity: 0;
-    }
 }
 
 .menu-body {
@@ -84,6 +80,15 @@
     }
 }
 
+:globla(.mobile-portrait),
+:global(.mobile-landscape) {
+    .menu-content {
+        &:first-child {
+            opacity: 0;
+        }
+    }
+}
+
 :global(.desktop) {
     .menu-content {
         width: 38rem;
@@ -91,5 +96,6 @@
         top: 8rem;
         right: 2rem;
         border-radius: 1rem;
+        pointer-events: all;
     }
 }
