--- a/src/game/components/MainAreaDesktop/styles.module.scss
+++ b/src/game/components/MainAreaDesktop/styles.module.scss
@@ -3,17 +3,19 @@
     padding-left: 2rem;
     padding-right: 2rem;
     display: flex;
-    gap: 4rem;
+    justify-content: space-between;
 }
 
 .panel {
+    flex-shrink: 0;
     width: 86rem;
     height: 31rem;
 }
 
 .left,
 .right {
-    width: 47rem;
+    flex-shrink: 0;
+    width: 48rem;
     flex-shrink: 0;
     flex-grow: 0;
     overflow: hidden;
