--- a/src/common/menus/Items/HowToPlay/Components/styles.module.scss
+++ b/src/common/menus/Items/HowToPlay/Components/styles.module.scss
@@ -72,3 +72,22 @@
         background-color: #2c2d3f;
     }
 }
+
+:global(.desktop) {
+    .heading-2 {
+        font-size: 1.43rem;
+    }
+
+    .heading-3 {
+        font-size: 1.32rem;
+    }
+
+    .text-htp {
+        font-size: 1.21rem;
+        line-height: 1.4;
+    }
+
+    .table {
+        font-size: 1.1rem;
+    }
+}
