--- a/src/common/menus/Items/Payout/PayoutContent/MenuPayoutTop/styles.module.scss
+++ b/src/common/menus/Items/Payout/PayoutContent/MenuPayoutTop/styles.module.scss
@@ -20,3 +20,13 @@
     font-weight: 700;
     letter-spacing: -0.014rem;
 }
+
+:global(.desktop) {
+    .menu-payout-info {
+        font-size: 1.1rem; // 1rem;
+    }
+
+    .menu-payout-top-bottom {
+        font-size: 1.54rem; // 1.4rem
+    }
+}
