--- a/src/common/menus/Items/Settings/Dropdown/styles.module.scss
+++ b/src/common/menus/Items/Settings/Dropdown/styles.module.scss
@@ -1,6 +1,11 @@
 .dropdown {
     position: relative;
     display: inline-block;
+
+    height: 3.6rem;
+    border-radius: 0.8rem;
+    border: 0.1rem solid rgba(94, 95, 115, 0.15);
+    background-color: #2c2d3f;
 }
 
 .dropdown-menu {
@@ -19,12 +24,46 @@
 }
 
 .dropdown-item {
-    padding: 1rem 0.8rem;
+    height: 3.6rem;
+    padding: 0 0.8rem;
     cursor: pointer;
     color: #fff;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 0.6rem;
+    transition: color 0.2s;
+
+    &:hover {
+        color: #cedbf9;
+    }
+}
+
+.button {
+    height: 100%;
+    border: none;
+    background: none;
+    display: flex;
+    padding-left: 0.6rem;
+    padding-right: 0.6rem;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.6rem;
+}
+
+.icon {
+    flex: 0 1 1.8rem;
+}
+
+.icon,
+.arrow {
+    flex: 0 1 1.8rem;
+    width: 1.8rem;
+    height: 1.8rem;
+}
+
+.text {
+    font-size: 1.43rem; // 1.3rem;
+    font-weight: 500;
 }
