--- a/src/common/EventsIdnlive/SantaCashBox/styles.module.scss
+++ b/src/common/EventsIdnlive/SantaCashBox/styles.module.scss
@@ -1,19 +1,32 @@
 .wrapper {
     position: absolute;
-    width: 4.8rem;
+}
+
+.button {
+    cursor: pointer;
 }
 
 .close {
     position: absolute;
-    width: 1.4rem;
-    height: 1.4rem;
-    border-radius: 1.4rem;
 
     background-color: var(--overlay-1);
 
     .close-icon {
         width: 100%;
         height: 100%;
+    }
+}
+
+:global(.mobile-portrait),
+:global(.mobile-landscape) {
+    .wrapper {
+        width: 4.8rem;
+    }
+
+    .close {
+        width: 1.4rem;
+        height: 1.4rem;
+        border-radius: 1.4rem;
     }
 }
 
@@ -71,5 +84,26 @@
             top: 1.5rem;
             right: -0.4rem;
         }
+    }
+}
+
+:global(.desktop) {
+    .wrapper {
+        width: 9.6rem;
+        z-index: var(--layer-game);
+
+        top: 20rem;
+        right: 0;
+
+        .close {
+            top: 1.5rem;
+            left: -0.4rem;
+        }
+    }
+
+    .close {
+        width: 2.1rem;
+        height: 2.1rem;
+        border-radius: 2.1rem;
     }
 }
