update desktop button

--- a/src/common/EventsIdnlive/SantaCashBox/styles.module.scss
+++ b/src/common/EventsIdnlive/SantaCashBox/styles.module.scss
@@ -20,8 +20,7 @@
 }
 
 :global(.mobile-portrait),
-:global(.mobile-landscape),
-:global(.desktop) {
+:global(.mobile-landscape) {
     .wrapper {
         width: 4.8rem;
     }
@@ -60,8 +59,7 @@
     }
 }
 
-:global(.mobile-landscape),
-:global(.desktop) {
+:global(.mobile-landscape) {
     .wrapper {
         top: 7rem;
 
@@ -90,23 +88,23 @@
     }
 }
 
-// :global(.desktop) {
-//     .wrapper {
-//         width: 9.6rem;
-//         z-index: var(--layer-game);
+:global(.desktop) {
+    .wrapper {
+        width: 9.6rem;
+        z-index: var(--layer-game);
 
-//         top: 20rem;
-//         right: 0;
+        top: 20rem;
+        right: 0;
 
-//         .close {
-//             top: 1.5rem;
-//             left: -0.4rem;
-//         }
-//     }
+        .close {
+            top: 1.5rem;
+            left: -0.4rem;
+        }
+    }
 
-//     .close {
-//         width: 2.1rem;
-//         height: 2.1rem;
-//         border-radius: 2.1rem;
-//     }
-// }
+    .close {
+        width: 2.1rem;
+        height: 2.1rem;
+        border-radius: 2.1rem;
+    }
+}
