--- a/src/common/EventsIdnlive/SantaCashBox/styles.module.scss
+++ b/src/common/EventsIdnlive/SantaCashBox/styles.module.scss
@@ -80,12 +80,12 @@
     }
 
     .layout-2 {
-        top: 8rem;
-        left: 0;
+        top: 2.4rem;
+        right: 0;
 
         .close {
             top: 1.5rem;
-            right: -0.4rem;
+            left: -0.4rem;
         }
     }
 }
