--- a/src/common/components/Footer/styles.module.scss
+++ b/src/common/components/Footer/styles.module.scss
@@ -1,7 +1,6 @@
 .footer {
     flex-shrink: 0;
     height: var(--height-footer);
-    background: var(--bg-footer);
 
     display: flex;
     line-height: 1.5;
@@ -9,13 +8,21 @@
 
 :global(.mobile-portrait) {
     .footer {
+        position: relative;
         justify-content: space-between;
+        background: var(--bg-footer);
     }
 }
 
 :global(.desktop),
 :global(.mobile-landscape) {
     .footer {
-        gap: var(--width-total-bet);
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+
+        justify-content: space-between;
+
+        z-index: 1;
     }
 }
