--- a/src/game/components/MainArea/styles.module.scss
+++ b/src/game/components/MainArea/styles.module.scss
@@ -32,6 +32,7 @@
 :global(.mobile-landscape) {
     .main-area {
         padding-bottom: 0.8rem;
+        padding-top: 2rem;
 
         flex-direction: column-reverse;
         gap: 2rem;
@@ -39,8 +40,8 @@
 
     .panel-history,
     .panel-bet {
-        padding-left: 5.7rem;
-        padding-right: 5.7rem;
+        padding-left: 6.2rem;
+        padding-right: 6.2rem;
     }
 }
 
