--- a/src/game/components/HowToPlayContent/Items/BetDescription/CardExample/style.module.scss
+++ b/src/game/components/HowToPlayContent/Items/BetDescription/CardExample/style.module.scss
@@ -11,13 +11,15 @@
 .name {
     white-space: nowrap;
     text-transform: uppercase;
-    font-size: 0.7rem;
+    // font-size: 0.7rem;
+    font-size: 1rem;
     font-weight: 700;
 }
 
 .value {
     text-transform: uppercase;
-    font-size: 0.8rem;
+    // font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .card {
