--- a/src/game/components/HowToPlayContent/Items/BetDescription/TableExample/styles.module.scss
+++ b/src/game/components/HowToPlayContent/Items/BetDescription/TableExample/styles.module.scss
@@ -10,7 +10,9 @@
     width: 100%;
     border-collapse: collapse;
 
-    font-size: 0.8rem;
+    // font-size: 0.8rem;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
     font-weight: 600;
 
     border: 0.06rem solid #4c4d66;
@@ -32,7 +34,7 @@
     }
 
     th {
-        font-size: 0.9rem;
+        // font-size: 0.9rem;
         font-weight: 400;
     }
 
@@ -46,7 +48,8 @@
     white-space: normal;
     font-weight: normal;
     text-align: center;
-    font-size: 0.8rem;
+    // font-size: 0.8rem;
+    font-size: 1.1rem;
 }
 
 .desc {
@@ -54,10 +57,23 @@
     white-space: normal;
     font-weight: normal;
     text-align: center;
-    font-size: 0.8rem;
+    // font-size: 0.8rem;
+    font-size: 1.1rem;
 }
 
 .break {
     word-wrap: break-word;
     white-space: normal;
+}
+
+:global(.desktop) {
+    .table {
+        font-size: 1.21rem;
+        line-height: 1.4;
+    }
+
+    .name,
+    .desc {
+        font-size: 1.21rem;
+    }
 }
