--- a/src/common/components/Alerts/Message/styles.module.scss
+++ b/src/common/components/Alerts/Message/styles.module.scss
@@ -44,6 +44,8 @@
 }
 
 .text {
+    position: relative;
+
     text-align: center;
     font-family: 'Poppins', sans-serif;
     font-size: 1.3rem;
@@ -51,4 +53,26 @@
     letter-spacing: 0.052rem;
     text-transform: uppercase;
     text-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.3);
+}
+
+.no-game .text {
+    &::before,
+    &::after {
+        content: 'x';
+        font-size: 0.9em;
+        color: rgba(255, 255, 255, 0.3);
+        font-weight: 800;
+
+        position: absolute;
+        top: 50%;
+        translate: 0 -50%;
+    }
+
+    &::before {
+        right: calc(100% + 0.4rem);
+    }
+
+    &::after {
+        left: calc(100% + 0.4rem);
+    }
 }
