--- a/src/game/components/Card/RenderCard/styles.module.scss
+++ b/src/game/components/Card/RenderCard/styles.module.scss
@@ -9,9 +9,13 @@
 
 :global(.desktop) {
     .container {
-        width: 4.8rem;
-        height: 6.2rem;
-        font-size: 4.8rem;
+        width: 5rem;
+        height: 6.5rem;
+        font-size: 2.8rem;
+        p {
+            margin-left: 0.5rem !important;
+            font-size: 2.8rem !important;
+        }
     }
 }
 
