--- a/src/common/components/Alerts/Message/styles.module.scss
+++ b/src/common/components/Alerts/Message/styles.module.scss
@@ -61,6 +61,10 @@
     text-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.3);
 }
 
+// .win .text {
+//     font-size: 1.2em;
+// }
+
 .no-game .text {
     &::before,
     &::after {
