--- a/src/common/components/ChipDeck/styles.module.scss
+++ b/src/common/components/ChipDeck/styles.module.scss
@@ -1,3 +1,5 @@
+@use 'sass:meta';
+
 .chip-deck {
     opacity: 1;
     transition: opacity 0.3s linear;
@@ -16,8 +18,8 @@
     height: 100%;
 }
 
-@import './v1';
-@import './v2';
+@include meta.load-css('v1');
+@include meta.load-css('v2');
 
 :global(.desktop),
 :global(.mobile-portrait) {
