--- a/src/game/components/TableBet/ButtonBet/position.scss
+++ b/src/game/components/TableBet/ButtonBet/position.scss
@@ -13,7 +13,7 @@
                 grid-column: 5;
             }
 
-            grid-row: #{ceil(math.div($i, 4)) + 1};
+            grid-row: #{math.ceil(math.div($i, 4)) + 1};
         }
     }
 
@@ -137,7 +137,7 @@
                 grid-row: 5;
             }
 
-            grid-column: #{ceil(math.div($i, 4)) + 1};
+            grid-column: #{math.ceil(math.div($i, 4)) + 1};
         }
     }
 
