--- a/src/common/components/MiniHowToPlay/Slide/Content/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Slide/Content/styles.module.scss
@@ -8,3 +8,10 @@
         margin-bottom: 0.8rem;
     }
 }
+
+:global(.desktop) {
+    .paragraf {
+        font-size: 1.5rem;
+        line-height: 1.5;
+    }
+}
