--- a/src/styles/common/_how-to-play.scss
+++ b/src/styles/common/_how-to-play.scss
@@ -1,17 +1,17 @@
-.mobile-portrait {
-    .htp {
-        background-color: red;
-    }
-}
+// .mobile-portrait {
+//     .htp {
+//         background-color: red;
+//     }
+// }
 
-.mobile-landscape {
-    .htp {
-        background-color: blue;
-    }
-}
+// .mobile-landscape {
+//     .htp {
+//         background-color: blue;
+//     }
+// }
 
-.desktop {
-    .htp {
-        background-color: green;
-    }
-}
+// .desktop {
+//     .htp {
+//         background-color: green;
+//     }
+// }
