adjust font size on desktop menu

--- a/src/common/menus/Items/HowToPlay/HowToPlayCard/styles.module.scss
+++ b/src/common/menus/Items/HowToPlay/HowToPlayCard/styles.module.scss
@@ -73,3 +73,13 @@
         visibility: visible;
     }
 }
+
+:global(.desktop) {
+    .title {
+        font-size: 1.6rem;
+    }
+
+    .top {
+        height: 5.2rem;
+    }
+}
