--- a/src/common/menus/Items/Transactions/Previous/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Previous/styles.module.scss
@@ -16,3 +16,9 @@
     letter-spacing: 0.028rem;
     padding-left: 0.8rem;
 }
+
+:global(.desktop) {
+    .date {
+        font-size: 1.6rem;
+    }
+}
