--- a/src/common/menus/Items/Main/Item/styles.module.scss
+++ b/src/common/menus/Items/Main/Item/styles.module.scss
@@ -19,6 +19,5 @@
     font-size: 1.2rem;
     font-weight: 400;
     text-align: center;
-    line-height: 1.25;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
