--- a/src/styles/common/_how-to-play.scss
+++ b/src/styles/common/_how-to-play.scss
@@ -15,3 +15,33 @@
 //         background-color: green;
 //     }
 // }
+
+.htp__container {
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    padding-bottom: 1.6rem;
+}
+
+.htp__section {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+
+    &:not(:last-child) {
+        margin-bottom: 1.6rem;
+    }
+}
+
+.htp__text {
+    color: #c8c9db;
+    font-size: 1.1rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+    margin-block: 0.4rem;
+}
+
+.desktop {
+    .htp__text {
+        font-size: 1.4rem;
+    }
+}
