--- a/src/common/menus/Items/HowToPlay/HowToPlayCardV2/styles.module.scss
+++ b/src/common/menus/Items/HowToPlay/HowToPlayCardV2/styles.module.scss
@@ -28,14 +28,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.2rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
     height: 4.6rem;
-}
-
-.title {
-    font-size: 1.4rem;
-    font-weight: 700;
-    text-transform: uppercase;
 }
 
 .accordion-icon {
@@ -75,11 +70,7 @@
 }
 
 :global(.desktop) {
-    .title {
-        font-size: 1.6rem;
-    }
-
     .top {
-        height: 5.2rem;
+        height: 5rem;
     }
 }
