--- a/src/common/components/HowToPlay/Features/Items/Menu/styles.module.scss
+++ b/src/common/components/HowToPlay/Features/Items/Menu/styles.module.scss
@@ -1,28 +1,7 @@
-.wrapper {
-    margin-top: 1.4rem;
-    display: flex;
-    flex-direction: column;
-}
-
-.card {
-    background-color: #2c2d3f;
-    padding: 1.4rem 0.8rem;
-    border-top: 0.5px solid #4c4d66;
-    border-left: 0.5px solid #4c4d66;
-    border-right: 0.5px solid #4c4d66;
-
+.card-menu {
     display: flex;
     align-items: center;
     gap: 1.6rem;
-
-    &:first-child {
-        border-radius: 0.6rem 0.6rem 0 0;
-    }
-
-    &:last-child {
-        border-bottom: 0.5px solid #4c4d66;
-        border-radius: 0 0 0.6rem 0.6rem;
-    }
 }
 
 .button-icon {
