--- a/src/common/components/HowToPlay/Features/Items/Settings/styles.module.scss
+++ b/src/common/components/HowToPlay/Features/Items/Settings/styles.module.scss
@@ -1,3 +1,25 @@
+.top {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.title {
+    text-transform: capitalize;
+    color: #fff;
+    font-weight: 500;
+}
+
+.icon {
+    width: 2rem;
+    height: 2rem;
+
+    svg {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .disclaimer {
     display: flex;
     flex-direction: column;
