--- a/src/game/components/HowToPlayContent/Items/BetDescription/TableBetExample/styles.module.scss
+++ b/src/game/components/HowToPlayContent/Items/BetDescription/TableBetExample/styles.module.scss
@@ -13,7 +13,7 @@
 
     th {
         background-color: #2b2d3d;
-        text-transform: capitalize;
+        text-transform: uppercase;
     }
 
     th,
